fix: Виправити плутанину із z-index

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -15,5 +15,4 @@ body {
   color: var(--color-grey-dark-1);
   background-color: var(--color-grey-light-1);
   position: relative;
-  z-index: -9999;
 }
